tests/errors/compiler/clncln_not_from_enum_class/clncln_not_from_enum_class_1.c
struct test
{
	int a;
} tmp;

int main()
{
	tmp::a = 5;
	return 0;
}